--- a/Source/SpaceParkAPI/SpaceParkAPI.csproj
+++ b/Source/SpaceParkAPI/SpaceParkAPI.csproj
@@ -1,10 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -17,5 +15,7 @@
     </PackageReference>
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
