--- a/Source/SpaceParkApp/SpaceParkApp.csproj
+++ b/Source/SpaceParkApp/SpaceParkApp.csproj
@@ -4,7 +4,6 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
       <PrivateAssets>all</PrivateAssets>
@@ -17,5 +16,7 @@
     </PackageReference>
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\SpaceParkAPI\SpaceParkAPI.csproj" />
+  </ItemGroup>
 </Project>
