--- a/Source/SpaceParkApp/SpaceParkApp.csproj
+++ b/Source/SpaceParkApp/SpaceParkApp.csproj
@@ -6,7 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpaceParkApi\SpaceParkApi.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SpaceParkApi\SpaceParkApi.csproj" />
+  </ItemGroup>
 </Project>
