--- a/Source/SpaceParkTests/SpaceParkTests.csproj
+++ b/Source/SpaceParkTests/SpaceParkTests.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SpaceParkApi\SpaceParkApi.csproj" />
+  </ItemGroup>
+
 </Project>
